<resources>
    <string name="app_name" translatable="false">OpenTheDoor</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgit_password">Forget Password ?</string>
    <string name="dont_have_account">Dont Have Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="have_an_account">Have An Account? </string>
    <string name="confirm">Confirm password</string>
    <string name="verify">Verify</string>
    <string name="send_code">Send Code</string>
    <string name="user_name">User Name</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="add_payment">Add Payment</string>
    <string name="payment">Payment</string>
    <string name="reviews">Reviews</string>
    <string name="statistics">Statistics</string>
    <string name="promocode">Promocode</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_company">About Company</string>
    <string name="open" translatable="false">Open navigation drawer</string>
    <string name="close" translatable="false">Close navigation drawer</string>
    <string name="edit_profile_date">Edit Profile Data</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="contine">Continue</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New password</string>
    <string name="current_location">Current Location:</string>
    <string name="location">Street,Area,Country,City.</string>
    <string name="find_service">Find Service</string>
    <string name="log_out">Log Out</string>
    <string name="give_bonus">Give Bonus</string>
    <string name="add_notes">Add Notes</string>
    <string name="report_proplem">Report a Proplem</string>
    <string name="service_type">Service Type:</string>
    <string name="service_type_text">maintance</string>
    <string name="service_provider_info">Service Provider Info:</string>
    <string name="service_provider_info_text">10 hr</string>
    <string name="finish_time_service">Finished time of service:</string>
    <string name="finish_time_service_text">01:50:23</string>
    <string name="cancel_service">Cancel Service</string>
    <string name="end_service">End Service</string>
    <string name="search">Search</string>
    <string name="select_service">Select Service</string>
    <string name="service_provider">Select Service Provider</string>
    <string name="promo_code">Promo Code</string>
    <string name="get_gift">Get your gift</string>
    <string name="add_review">Add Review</string>
    <string name="payment_method">Payment Method</string>
    <string name="bank_name_text">Bank Name</string>
    <string name="card_number_text">Card Number</string>
    <string name="cardholder_name">CARDHOLDER Name</string>
    <string name="expire_date">EXPIRE DATE</string>
    <string name="cvv" translatable="false">CVV</string>
    <string name="cvv_text" translatable="false">1234</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="save_card_information">Save Card Information</string>
    <string name="cancel_service_popUp">Cancel Service   00:45</string>
    <string name="confirm_now">Confirm Now</string>
    <string name="reorder_service">Reorder Service</string>
    <string name="hoursOfServiceProvider">Hours of service provider:</string>
    <string name="given_bonous">Given bonous:</string>
    <string name="costOfServiceProvider">Cost of service provider:</string>
    <string name="discount">Discount:</string>
    <string name="total_cost">Total cost:</string>
    <string name="minCharge">Minimum charge 100$, Maximum charge 1000$</string>
    <string name="notification">Notifications</string>
    <string name="notify_message_info">The service provider arrives now.</string>
    <string name="edit_review">Edit Review</string>
    <string name="delete_review">Delete Review</string>


    <string name="reminding">Reminding</string>
    <string name="reminding_content">pleaze check your GPS</string>
    <string name="pos_mess">i open it.</string>
    <string name="neg_mess">I\'m already opened it</string>
    <string name="current_location_map">My Current Location Is Here!!</string>
    <string name="notes">Notes</string>
    <string name="notes_txt">Notes about provider service:</string>
    <string name="notes_edit_text">write your notes here</string>
    <string name="send_notes">Send Note</string>
    <string name="report">Report</string>
    <string name="report_problem_about">Rebort a problem about :</string>
    <string name="report_proplem_value">write here the reason:</string>
    <string name="bonus_currency">10 $ USD.</string>
</resources>
