<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".popupWindow.InProcessPopUpActivity"
    android:id="@+id/rl"

    >


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/timer_bg"
        android:layout_gravity="center_vertical|center_horizontal"

        android:layout_marginTop="@dimen/margin_top">


        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />


        <TextView
            app:layout_constraintTop_toBottomOf="@id/user_name"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/service_type"
            android:textSize="20sp"
            android:text="@string/service_type"
            />

        <TextView
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_type"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/service_type_text"
            android:textSize="20sp"
            android:text="@string/service_type_text"
            android:drawablePadding="10sp"
            android:drawableLeft="@drawable/service_type"
            />

        <TextView
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_type_text"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/service_provider_info"
            android:textSize="20sp"
            android:text="@string/service_provider_info"
            android:layout_marginTop="10sp"
            />


        <TextView
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_provider_info"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/service_provider_info_text"
            android:textSize="20sp"
            android:text="@string/service_provider_info_text"
            />

        <TextView
            app:layout_constraintLeft_toRightOf="parent"
            android:id="@+id/finish_time_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/service_provider_info_text"
            android:text="@string/finish_time_service"
            android:layout_marginTop="10sp"
            android:textColor="@color/black"
            />


        <TextView
            android:id="@+id/finish_time_service_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/finish_time_service"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            android:text="@string/finish_time_service_text"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"


            />

        <LinearLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="horizontal"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/finish_time_service_text">

            <TextView
                android:id="@+id/give_bonus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="15sp"
                android:drawableTop="@drawable/give_bonus"
                android:gravity="center"
                android:text="@string/give_bonus"
                android:textAlignment="center" />


            <TextView
                android:id="@+id/add_notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="15sp"
                android:drawableTop="@drawable/add_notes"
                android:gravity="center"
                android:text="@string/add_notes"
                android:textAlignment="center"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="232dp" />


            <TextView
                android:id="@+id/report_proplem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawablePadding="15sp"
                android:drawableTop="@drawable/report_problem"
                android:gravity="center"
                android:text="@string/report_proplem"
                android:textAlignment="center" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent">

            <Button

                android:id="@+id/end_service"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20sp"
                android:layout_weight="6"
                android:background="@color/colorPrimary"
                android:drawablePadding="20sp"

                android:text="End Service"


                />

            <ImageView

                android:id="@+id/cancel_service"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/cancel_service" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:src="@drawable/review_user_pic_withframe"
        android:layout_gravity="center_horizontal"/>

</FrameLayout>