<?xml version="1.0" encoding="utf-8"?>



<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity"
    >


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_marginTop="70sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"


        android:background="#ffffff"
        tools:context=".LoginActivity">


        <android.support.design.widget.TextInputLayout

            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
           android:layout_marginTop="60dp"
            tools:ignore="MissingConstraints"
            android:hint="@string/phone"
            android:tooltipText="@string/app_name"
            app:hintTextAppearance="@string/app_name">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/contact_phone"
                android:drawableStart="@drawable/contact_phone"
                android:inputType="number"
                android:drawablePadding="14dp"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            android:tooltipText="@string/app_name"
            app:hintTextAppearance="@string/app_name"
            android:hint="@string/password"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/login_password"
                android:drawableStart="@drawable/login_password"
                android:drawablePadding="14dp"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/colorPrimary"
            android:text="@string/sign_in"
            android:textColor="#ffff"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />


        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/forgit_password"
            android:textColor="@color/black"

            android:textSize="@dimen/text_size"

            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_password">

            <TextView
                android:id="@+id/dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size"
                />


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|fill_vertical"
        android:layout_marginTop="25sp"
        android:src="@drawable/login_icon"
        android:id="@+id/login_icon"
        />



</FrameLayout>