<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/contactus_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/notes"
                android:textColor="@android:color/white"
                android:textSize="21sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/notification_back_txtV_id"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_arrow_back_black_24dp"
                android:scaleType="fitXY" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <TextView
        android:layout_margin="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_txt"
        android:id="@+id/notes"
        android:textColor="@color/black"
        android:textSize="20sp"
        />


    <android.support.design.widget.TextInputLayout
        app:layout_constraintStart_toStartOf="@id/notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_left"
        android:id="@+id/notes_input"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes_edit_text"
            android:maxLines="7"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="@id/notes_input"
        app:layout_constraintEnd_toEndOf="@id/notes_input"
        app:layout_constraintTop_toBottomOf="@id/notes_input"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_left"
        android:id="@+id/send_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/send_notes"
        android:textColor="#ffff"
        />





</android.support.constraint.ConstraintLayout>