<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GiveBonusActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/history_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/history"
                android:textColor="@android:color/white"
                android:textSize="21sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/history_back_txtV_id"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_arrow_back_black_24dp"
                android:scaleType="fitXY" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="@color/black"
       android:text="@string/give_bonus"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/app_bar"
       android:layout_marginTop="60dp"
       android:layout_marginStart="@dimen/margin_left"
       android:id="@+id/give_bonus"
       android:textSize="20dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/bonus_input"
        android:layout_marginTop="60dp"
       android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/give_bonus"
        app:layout_constraintEnd_toStartOf="@id/bonus_currency"
        app:layout_constraintTop_toBottomOf="@id/give_bonus">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="10" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:layout_marginTop="60dp"
        android:id="@+id/bonus_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bonus_currency"
        android:textColor="@color/colorAccent"
        android:layout_marginEnd="@dimen/margin_left"
        android:textSize="25sp"
       app:layout_constraintTop_toBottomOf="@id/give_bonus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bonus_input" />


    <android.support.design.button.MaterialButton
        android:id="@+id/give_bonus_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/sign_in"
        android:textColor="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/bonus_input"
        app:layout_constraintTop_toBottomOf="@+id/bonus_input"
        android:layout_marginEnd="@dimen/margin_left"
        />

</android.support.constraint.ConstraintLayout>